<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/img_user"
        android:text="@string/username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/img_user"
        android:text="@string/id"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_user"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_location"
        android:layout_marginTop="8dp"
        android:text="@string/companies"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_company"
        android:layout_marginTop="8dp"
        android:text="@string/repository"
        android:textSize="14sp" />

</RelativeLayout>